tests/NormalTests/paczka1/fuzzy1/14794430.err
Error in line 4: hJLPKA S675 97,1
Error in line 9: tFe S675 11,0
Error in line 5: VmOEK7 S295 10,2
Error in line 22: tFe S12D 353,1
Error in line 16: hJLPKA A472 53,6
Error in line 18: tFe S128 91,0
Error in line 26: mcgdJCINYcJ S675 186,9
